--- a/index.html
+++ b/index.html
@@ -1,47 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pusaq Task Manager</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 2rem;
-      background: #f9f9f9;
+      font-family: 'Montserrat', sans-serif;
+      background-color: #f4f7fa;
+      color: #333;
+      margin: 0;
+      padding: 2rem;
+    }
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      background-color: #fff;
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.05);
     }
     h1 {
       text-align: center;
-      color: #333;
+      color: #0053A6;
     }
-    .task-form, table {
-      max-width: 800px;
-      margin: 0 auto 2rem auto;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    .task-form input, .task-form select {
-      margin: 0.5rem 0;
-      padding: 0.5rem;
+    input, select, button {
       width: 100%;
+      padding: 0.75rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-family: 'Montserrat', sans-serif;
+    }
+    button {
+      background-color: #0053A6;
+      color: white;
+      font-weight: 600;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #003e80;
     }
     table {
       width: 100%;
       border-collapse: collapse;
+      margin-top: 2rem;
     }
     th, td {
-      padding: 0.75rem;
-      border: 1px solid #ddd;
       text-align: center;
+      padding: 0.75rem;
+      border-bottom: 1px solid #ddd;
     }
     th {
-      background-color: #333;
-      color: white;
-    }
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
+      background-color: #e5f0ff;
+      color: #003e80;
     }
     .done {
       text-decoration: line-through;
@@ -50,14 +64,13 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Pusaq Task Manager</h1>
 
-  <h1>Pusaq Task Manager</h1>
-
-  <div class="task-form">
-    <input type="text" id="title" placeholder="Task Title" required />
-    <input type="text" id="assigned" placeholder="Assigned To" required />
-    <input type="date" id="startDate" required />
-    <input type="date" id="deadline" required />
+    <input type="text" id="title" placeholder="Task Title">
+    <input type="text" id="assigned" placeholder="Assigned To">
+    <input type="date" id="startDate">
+    <input type="date" id="deadline">
     <select id="priority">
       <option>Low</option>
       <option>Medium</option>
@@ -70,28 +83,28 @@
       <option>Blocked</option>
       <option>Done</option>
     </select>
-    <input type="number" id="progress" placeholder="Progress (%)" min="0" max="100" />
-    <input type="text" id="project" placeholder="Project Name" />
-    <input type="text" id="notes" placeholder="Notes or Links" />
+    <input type="number" id="progress" placeholder="Progress (%)" min="0" max="100">
+    <input type="text" id="project" placeholder="Project Name">
+    <input type="text" id="notes" placeholder="Notes / Links">
     <button onclick="addTask()">Add Task</button>
-  </div>
 
-  <table id="taskTable">
-    <thead>
-      <tr>
-        <th>Task</th>
-        <th>Assigned</th>
-        <th>Start</th>
-        <th>Deadline</th>
-        <th>Priority</th>
-        <th>Status</th>
-        <th>Progress</th>
-        <th>Project</th>
-        <th>Notes</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <table id="taskTable">
+      <thead>
+        <tr>
+          <th>Task</th>
+          <th>Assigned</th>
+          <th>Start</th>
+          <th>Deadline</th>
+          <th>Priority</th>
+          <th>Status</th>
+          <th>Progress</th>
+          <th>Project</th>
+          <th>Notes</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
   <script>
     function addTask() {
@@ -118,12 +131,10 @@
         }
       });
 
-      // Clear form
-      document.querySelectorAll('.task-form input').forEach(i => i.value = "");
+      document.querySelectorAll('input').forEach(i => i.value = "");
       document.getElementById("status").value = "Not Started";
       document.getElementById("priority").value = "Low";
     }
   </script>
-
 </body>
 </html>
