--- a/index.html
+++ b/index.html
@@ -2,139 +2,176 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pusaq Task Manager</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <title>Pusaq Login</title>
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      background-color: #f4f7fa;
-      color: #333;
       margin: 0;
-      padding: 2rem;
-    }
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      background-color: #fff;
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.05);
-    }
-    h1 {
-      text-align: center;
-      color: #0053A6;
-    }
-    input, select, button {
-      width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
       font-family: 'Montserrat', sans-serif;
-    }
-    button {
-      background-color: #0053A6;
+      background-color: #000;
       color: white;
-      font-weight: 600;
-      border: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+    }
+
+    h1 {
+      margin-bottom: 30px;
+    }
+
+    .profile-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+      gap: 20px;
+      max-width: 700px;
+      width: 90%;
+      margin-bottom: 30px;
+    }
+
+    .profile {
+      text-align: center;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #003e80;
+
+    .profile img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #0053A6;
+      transition: transform 0.2s;
     }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 2rem;
+
+    .profile:hover img {
+      transform: scale(1.05);
     }
-    th, td {
+
+    .name {
+      margin-top: 10px;
+      font-weight: bold;
+      color: #fff;
+    }
+
+    .modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 10;
+    }
+
+    .modal-content {
+      background: #111;
+      padding: 2rem;
+      border-radius: 10px;
       text-align: center;
-      padding: 0.75rem;
-      border-bottom: 1px solid #ddd;
+      max-width: 400px;
+      width: 90%;
     }
-    th {
-      background-color: #e5f0ff;
-      color: #003e80;
+
+    input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      border: none;
+      outline: none;
     }
-    .done {
-      text-decoration: line-through;
-      color: green;
+
+    button {
+      padding: 10px 20px;
+      background: #0053A6;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #003d7a;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Pusaq Task Manager</h1>
+  <h1>Who's working today?</h1>
+  <div class="profile-grid" id="profiles"></div>
 
-    <input type="text" id="title" placeholder="Task Title">
-    <input type="text" id="assigned" placeholder="Assigned To">
-    <input type="date" id="startDate">
-    <input type="date" id="deadline">
-    <select id="priority">
-      <option>Low</option>
-      <option>Medium</option>
-      <option>High</option>
-      <option>Urgent</option>
-    </select>
-    <select id="status">
-      <option>Not Started</option>
-      <option>In Progress</option>
-      <option>Blocked</option>
-      <option>Done</option>
-    </select>
-    <input type="number" id="progress" placeholder="Progress (%)" min="0" max="100">
-    <input type="text" id="project" placeholder="Project Name">
-    <input type="text" id="notes" placeholder="Notes / Links">
-    <button onclick="addTask()">Add Task</button>
-
-    <table id="taskTable">
-      <thead>
-        <tr>
-          <th>Task</th>
-          <th>Assigned</th>
-          <th>Start</th>
-          <th>Deadline</th>
-          <th>Priority</th>
-          <th>Status</th>
-          <th>Progress</th>
-          <th>Project</th>
-          <th>Notes</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+  <!-- Login Modal -->
+  <div class="modal" id="loginModal">
+    <div class="modal-content">
+      <h2 id="loginName">Login</h2>
+      <input type="password" id="passwordInput" placeholder="Enter password" />
+      <button onclick="checkPassword()">Login</button>
+    </div>
   </div>
 
   <script>
-    function addTask() {
-      const title = document.getElementById("title").value;
-      const assigned = document.getElementById("assigned").value;
-      const start = document.getElementById("startDate").value;
-      const deadline = document.getElementById("deadline").value;
-      const priority = document.getElementById("priority").value;
-      const status = document.getElementById("status").value;
-      const progress = document.getElementById("progress").value;
-      const project = document.getElementById("project").value;
-      const notes = document.getElementById("notes").value;
+    const users = [
+      { name: 'Ari', role: 'member' },
+      { name: 'Issy', role: 'member' },
+      { name: 'Vicho', role: 'member' },
+      { name: 'Tania', role: 'member' },
+      { name: 'Andres', role: 'member' },
+      { name: 'Yannick', role: 'admin' },
+      { name: 'Boris', role: 'admin' }
+    ];
 
-      const table = document.getElementById("taskTable").getElementsByTagName('tbody')[0];
-      const row = table.insertRow();
+    let selectedUser = null;
 
-      const data = [title, assigned, start, deadline, priority, status, progress + "%", project, notes];
-
-      data.forEach((item, i) => {
-        const cell = row.insertCell(i);
-        cell.innerText = item;
-        if (status === "Done") {
-          cell.classList.add("done");
-        }
-      });
-
-      document.querySelectorAll('input').forEach(i => i.value = "");
-      document.getElementById("status").value = "Not Started";
-      document.getElementById("priority").value = "Low";
+    function generatePassword() {
+      return Math.random().toString(36).slice(-8);
     }
+
+    function loadProfiles() {
+      const container = document.getElementById('profiles');
+      container.innerHTML = '';
+      users.forEach(user => {
+        const savedData = JSON.parse(localStorage.getItem(user.name)) || {};
+        if (!savedData.password) {
+          savedData.password = generatePassword();
+          savedData.name = user.name;
+          savedData.role = user.role;
+          savedData.image = 'https://via.placeholder.com/100';
+          localStorage.setItem(user.name, JSON.stringify(savedData));
+        }
+
+        const div = document.createElement('div');
+        div.className = 'profile';
+        div.onclick = () => openLogin(user.name);
+
+        div.innerHTML = `
+          <img src="${savedData.image}" alt="${user.name}" />
+          <div class="name">${savedData.name}</div>
+        `;
+        container.appendChild(div);
+      });
+    }
+
+    function openLogin(username) {
+      selectedUser = username;
+      document.getElementById('loginName').innerText = `Enter password for ${username}`;
+      document.getElementById('passwordInput').value = '';
+      document.getElementById('loginModal').style.display = 'flex';
+    }
+
+    function checkPassword() {
+      const input = document.getElementById('passwordInput').value;
+      const saved = JSON.parse(localStorage.getItem(selectedUser));
+      if (input === saved.password) {
+        alert(`✅ Logged in as ${saved.name} (${saved.role})`);
+        sessionStorage.setItem("currentUser", saved.name); // Store for dashboard access
+        window.location.href = saved.role === 'admin' ? 'admin.html' : 'dashboard.html';
+      } else {
+        alert('❌ Incorrect password!');
+      }
+    }
+
+    loadProfiles();
   </script>
 </body>
 </html>
