--- a/dashboard.html
+++ b/dashboard.html
@@ -148,4 +148,15 @@
   </script>
 
 </body>
+  <div style="text-align: right; margin-bottom: 1rem;">
+  <a href="profile.html" style="
+    background-color: #0053A6;
+    color: white;
+    padding: 10px 16px;
+    text-decoration: none;
+    border-radius: 6px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+  ">👤 Profile</a>
+</div>
 </html>
