--- a/admin.html
+++ b/admin.html
@@ -98,9 +98,9 @@
 <body>
 
   <div class="top-right">
-    <a href="profile.html" id="profileBtn">👤 Profile</a>
-  </div>
-
+  <a href="admin-calendar.html">📅 Calendar</a>
+  <a href="profile.html" id="profileBtn">👤 Profile</a>
+</div>
   <h1>📊 Pusaq Project Manager (Admin)</h1>
 
   <!-- Project Creation -->
