--- a/admin.html
+++ b/admin.html
@@ -97,8 +97,9 @@
 </head>
 <body>
 
-  <div class="top-right">
-  <a href="admin-calendar.html">📅 Calendar</a>
+ <div class="top-right">
+  <a href="admin-calendar.html">📅 List View</a>
+  <a href="admin-calendar-grid.html">📅 Grid View</a>
   <a href="profile.html" id="profileBtn">👤 Profile</a>
 </div>
   
